# di-client

./: .gitignore  .gitmodules  Cargo.toml
di-cli/: Cargo.toml
di-cli/src/: app.rs  cmd.rs  config.rs  error.rs  lex.rs  lib.rs  main.rs  models.rs  terminal.rs  util.rs
di-cli/src/cmd/: config.rs  field.rs  item.rs  link.rs  record.rs  stats.rs  tag.rs  user.rs
di-cli/src/lex/: parse.rs
di-cli/src/models/: field.rs  item.rs  record.rs  tag.rs  types.rs
di-cli/src/terminal/: color.rs  layout.rs
di-cli/tests/: lib.rs
di-core/: Cargo.toml
di-core/src/: lib.rs
di-edit/: Cargo.toml
di-http/: Cargo.toml
di-parse/: '  Cargo.toml  test.txt
di-parse/src/: grammar.pest  lib.rs  main.rs  parse.rs
di-tui/: Cargo.toml
di-tui/src/: main.rs
