[package]
name = "di-v1"
description = ""
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
homepage = "http://div.is/"
default_run = "di-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "di-cli"
path = "./di-cli/src/main.rs"

[[bin]]
name = "di-tui"
path = "./di-tui/src/main.rs"

[[bin]]
name = "di-edit"
path = "./di-edit/src/main.rs"

[workspace]
members = [
  "di-cli",
  "di-tui",
  "di-core",
  "di-edit",
  "di-http"
]


[profile.release]
lto = true
overflow-checks = true
panic = "abort"
