[package]
name = "di-cli"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "divcli"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"


[dependencies]
parking_lot = "0.11.0"
aho-corasick = "*"
argh = "0.1.4"
bstr = "*"
ignore = "*"
chrono = "*"
log = "0.4.8"
chrono-english = "*"
chrono-humanize = "0.0.*"
atty = "*"
ansi_term = "*"
console = "*"
indicatif="*"
regex = "*"
strsim = "*"
notify = "*"
nom = "*"
combine = "*"
pom = "*"
lscolors = "*"
rand = "*"
directories = "*"
petgraph = {version = "0.5.0", default-features = false, features = ["stable_graph"]}
term_size = "*"
time = "*"
# users = "*"
# term_grid = "8"
# locale = "*"
# natord = "*"
# scoped_threadpool = "*"
# humansize = "*"
# pretty-bytes = "*"
# ansi_colours = "*"
# terminal_size="*"
# num-format = "*"
# unicode-width = "*"
# statrs = "*"
# futures = "0.3"
# async-std = { version = "*", features = ["attributes"] }
# git2 = "*"
#srtparse = "0.2.0"

# directories = "*"
# term_grid = "0.1.*"

# tempfile = "*"
# tiny_http = "*"
# byteorder = "*"
# app_dirs = "*"
# regex_syntax = "*"
# termcolor = "*"
#time = "*"
# rust_decimal = "1.8"

# rayon = "*"
# futures-timer = "3.0.2"
# futures = { version = "0.3", features = ["async-await"] }
# timer = "*"
# app_dirs = "*"
# syntect = "*"
# error-chain = "*"
# unicode-segmentation = "*"
# unicode-width = "*"
# fragment = "*"
# structopt = "0.3.13"
# predicates = "1.0.4"
# proptest = "0.9.5"
# rstest = "0.6.2"
# unic-char-range = "0.9.0"
# unic-ucd-category = "0.9.0"
# unicode-segmentation = "1.6.0"
# luthor = "*"
# combine_language = "*"
# rust-stemmers = "1.2.0"
# whatlang = "0.11.0"
# base64 = "*"
#glob = "*"
# lalrpop = "*"
# phonenumber ="*"
# shlex = "*"
# humanize-rs = "0.1"
# mailparse = "*"
# nom_locate = "*"
# urlocator = "*"
# term_size = "*"
# term = "*"
# terminal-size = "*"
# terminal-width = "*"
# walkdir = "*"
# syntect = "*"
# tokio = { version = "^0.2", features = ["full"] }
# tokio-util = { version = "^0.3", features = ["full"] }
# thiserror="*"
# textwrap = "0.12.1"
# humantime = "2.0.1"
# colored = "*"
# strum = "*"
# strum_macros = "*"
# logos = "*"

# parse_duration = "2.1.0"
# unescape = "0.1.0"
#serde_humantime = "*"
# heck = "*"
#cohvert_case = "*"
# twoway = "*"
# clap_derive = "*"
# clap_generate = "*"
# pbr = '*'
# term-table = "*"
# dialoguer="*"
# read_input = "*"
# argh = "*"
# num_cpus = "*"
# rand = "*"
# tabwriter = "*"
# dirs-next = "*"
# clicolors-control = "*"
# ryu = "*"
# which = "*"
# serde = { version = "*", features = ["derive"] }
# tempdir = "*"
# filename = "*"
# filetime = "*"
# diff = "*"
# stringly_conversions = "0.1.1" #no std
# tinystr = "*"
# lexical = "*"
# approx= "*"
# uom = "*"
# indexmap = "*"
# num = "*"
# structopt = "*"
# structopt-derive = "*"
# crossterm = "*"
# console = "*"
# tinyvec = "*" #no std
# indexmap = "*"
# crossbeam-channel = "*"
# threadpool = "*"
# derive_more = "*"
# pest= "*"
# getopts = "*"
# html5ever = "*"
# cssparser = "*"
# crossbeam-utils = "*"
# olored = "2.0"


# [dependencies.clap]
# version = "~3.0.0-beta.2"
# features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
criterion = "0.3.3"
pretty_assertions = "*"
pretty_env_logger = "*"
assert_cmd = "*"
assert_fs = "*"

[profile.release]
opt-level = 3
lto = true
codegen_units = 1

[profile.dev]
debug = true

[profile.test]
debug = true
opt-level = 3
