[package]
name = "di-core"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
thiserror="*"
smallvec = "*"
rayon = "*"
chrono = "*"
num_cpus = "*"
once_cell = "1"
regex = { version = "1", default-features = false, features = ["std"] }
crossbeam = "*"
futures = { version = "0.3", features = ["thread-pool"] }
tempfile = "3"
memmap = "0.7"
combine = { version = "4", default-features = false, features = [] }
# pest = "2"
# pest_derive = "2"
# rust-stemmers = "1"
# uuid = { version = "0.8", features = ["v4", "serde"] }
# byteorder = "1"
# brotli = "3.3.0"
# levenshtein_automata = "0.2"

[dev-dependencies]
proptest = "0.10"
